tests/fixtures/invalid/min_int_dict.py
# Cannot call min() with Int, Dict[str, int]
x = min(1, {"a": 1})
